--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Giggle Stories</h2>
+            <h2 class="experience-sub-title project-title">Food Order</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -182,8 +182,8 @@
               </button>
              
             </div>
-            <p>"Food Order,"Developed a responsive and user-friendly food delivery website using React.js and tailwind CSS.
-                Implemented core features such as menu browsing, order placement, cart management, and real-time updates
+            <p>Food Order,Developed a responsive and user-friendly food delivery website.
+                Implemented core features such as menu, order, cart management, and
                 using state management with React hooks.</p>
           </div>
           <div class="details-container color-container">
